<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="121dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:text="@string/name_prompt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_difficulty_prompt"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/gameDifficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/easy"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_prompt"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/spriteOptions1"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/sprite1Bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/sprite1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/hera_sprite" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/sprite2Bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/sprite2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/shirley_sprite" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/spriteOptions2"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/sprite3Bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/sprite3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/madeline_sprite" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/sprite4Bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/sprite4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/esther_sprite" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/sprite5Bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/sprite5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/jonathan_sprite" />
            </FrameLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />


    </LinearLayout>


</RelativeLayout>